--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
     - assets/Call.svg
     - assets/user.svg
     - assets/settings.svg
+    - assets/Video.svg
+    - assets/m-Call.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
